# sos-notebook

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile_old  MANIFEST.in  README.md  Travis_debug.sh  docker-compose.yml  docker.yml  install_sos_notebook.sh  pyproject.toml  setup.py  tasks.py
.github/linters/: .python-lint
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml  tests.yml
development/: Dockerfile  docker-compose.yml  install_sos_notebook.sh  readme
development/eg_sshd/: Dockerfile
development/eg_sshd/.ssh/: known_hosts
development/sos/.ssh/: id_rsa.pub
development/sos_notebook/: Dockerfile
development/sos_notebook/.ssh/: id_rsa
development/sos_notebook_test/: Dockerfile
src/sos_notebook/: __init__.py  _version.py  comm_manager.py  completer.py  converter.py  inspector.py  install.py  install_sos_notebook.sh  kernel.js  kernel.py  magics.py  preview.py  sos_executor.py  sos_step.py  step_executor.py  subkernel.py  test_utils.py  visualize.py  workflow_executor.py
src/sos_notebook/templates/: README.md  code_cell.tpl  codemirror_input.tpl  preview.tpl  sos-cm-toc.tpl  sos-cm.tpl  sos-doc.tpl  sos-full-toc.tpl  sos-full.tpl  sos-markdown.tpl  sos-report-only-toc.tpl  sos-report-only.tpl  sos-report-toc-v2.tpl  sos-report-toc.tpl  sos-report-v1.tpl  sos-report-v2.tpl  sos-report.tpl  toc.tpl  toc_doc.tpl  toc_tut.tpl
src/sos_notebook/templates/assets/: jquery.tocify.min.js
src/sos_notebook/templates/parts/: cm.tpl  code_cell.css  control_panel.css  control_panel.html  control_panel.js  control_panel.tpl  doc_toc.tpl  hover_doc.tpl  preview.css  preview.js  preview.tpl  sos_style.tpl  styles.css  toc.tpl
src/sos_notebook/templates/sos-cm/: index.html.j2  sos-cm.html.j2
src/sos_notebook/templates/sos-cm-toc/: index.html.j2  sos-cm-toc.html.j2
src/sos_notebook/templates/sos-cm-toc/parts/: toc.tpl
src/sos_notebook/templates/sos-full/: index.html.j2  sos-full.html.j2
src/sos_notebook/templates/sos-full-toc/: index.html.j2  sos-full-toc.html.j2
src/sos_notebook/templates/sos-full/parts/: preview.tpl  sos_style.tpl
src/sos_notebook/templates/sos-lab-cm/: conf.json  index.html.j2  sos-lab-cm.html.j2
src/sos_notebook/templates/sos-lab-cm/parts/: cm.tpl
src/sos_notebook/templates/sos-lab-full/: index.html.j2  sos-lab-full.html.j2
src/sos_notebook/templates/sos-lab-full/parts/: sos_style.tpl
src/sos_notebook/templates/sos-lab-report-only/: conf.json  index.html.j2  sos-lab-report-only.html.j2
src/sos_notebook/templates/sos-markdown/: conf.json  index.md.j2  sos-markdown.md.j2
src/sos_notebook/templates/sos-report/: index.html.j2  sos-report.html.j2
src/sos_notebook/templates/sos-report-only/: conf.json  index.html.j2  sos-report-only.html.j2
src/sos_notebook/templates/sos-report-only-toc/: conf.json  index.html.j2  sos-report-only-toc.html.j2
src/sos_notebook/templates/sos-report-toc/: conf.json  index.html.j2  sos-report-toc.html.j2
src/sos_notebook/templates/sos-report-toc-v2/: conf.json  index.html.j2  sos-report-toc-v2.html.j2
src/sos_notebook/templates/sos-report-v1/: conf.json  index.html.j2  sos-report-v1.html.j2
src/sos_notebook/templates/sos-report-v1/parts/: control_panel_v1.tpl
src/sos_notebook/templates/sos-report-v2/: index.html.j2  sos-report-v2.html.j2
src/sos_notebook/templates/sos-report/parts/: control_panel.tpl
test/: Dockerfile  build_test_docker.sh  conftest.py  sample_notebook.ipynb  sample_papermill_notebook.ipynb  test-file.Rmd  test.ipynb  test_basic.py  test_completor.py  test_console.py  test_convert.py  test_frontend.py  test_inspector.py  test_jupyter_convert.py  test_jupyter_sos.py  test_jupyter_tasks.py  test_kernels.py  test_magic.ipynb  test_magics.py  test_sos_completer.py  test_sos_inspector.py  test_sos_kernel.py  test_sos_magics.py  test_sosrunsave.py  test_switch_kernels.py  test_workflow.py  utils.py
test/.ssh/: known_hosts
test/selenium/: conftest.py  test_deletecell.py  test_dualmode_insertcell.py  test_kernels.py  test_magics.py  test_markdown.py  test_runsave.py  test_sidePanel.py  test_sosrunsave.py  utils.py
