[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos-notebook"
version = "0.24.5"
description = "Script of Scripts (SoS): an interactive, cross-platform, and cross-language workflow system for reproducible data analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "3-clause BSD"}
authors = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
maintainers = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
keywords = ["jupyter", "notebook", "workflow", "reproducible-research", "multi-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X", 
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "jupyter_client>=8.0.0",
    "jupyter_core",
    "sos>=0.22.0",
    "nbformat",
    "nbconvert>=6.0.1",
    "ipython",
    "ipykernel>=6.18.0",  # 6.18.0 and newer has a new comm manager interface
    "jinja2",  # https://github.com/spatialaudio/nbsphinx/issues/563
    "notebook>=5.0.0",
    "tabulate",
    "pandas",
    "numpy",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/vatlab/SOS"
Repository = "https://github.com/vatlab/sos-notebook"
Documentation = "https://vatlab.github.io/sos-docs/notebook.html"
"Bug Tracker" = "https://github.com/vatlab/sos-notebook/issues"

[project.entry-points.sos_converters]
"sos-ipynb" = "sos_notebook.converter:ScriptToNotebookConverter"
"ipynb-sos" = "sos_notebook.converter:NotebookToScriptConverter"
"ipynb-html" = "sos_notebook.converter:NotebookToHTMLConverter"
"ipynb-pdf" = "sos_notebook.converter:NotebookToPDFConverter"
"ipynb-md" = "sos_notebook.converter:NotebookToMarkdownConverter"
"ipynb-ipynb" = "sos_notebook.converter:NotebookToNotebookConverter"


[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.tpl", "*.png", "*.css", "*.j2", "*.json"]