[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos-notebook"
version = "0.24.6"
description = "Script of Scripts (SoS) kernel and backend for Jupyter - backend dependency for jupyterlab-sos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "3-clause BSD"}
authors = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
maintainers = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
keywords = ["jupyter", "notebook", "workflow", "reproducible-research", "multi-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X", 
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "jupyter_client>=8.0.0",
    "jupyter_core",
    "sos>=0.22.0",
    "nbformat",
    "nbconvert>=6.0.1",
    "ipython",
    "ipykernel>=6.18.0",  # 6.18.0 and newer has a new comm manager interface
    "jinja2",  # https://github.com/spatialaudio/nbsphinx/issues/563
    "notebook>=5.0.0",
    "tabulate",
    "pandas",
    "numpy",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "invoke>=2.0",
    "pre-commit",
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "build",
]

[project.urls]
Homepage = "https://github.com/vatlab/SOS"
Repository = "https://github.com/vatlab/sos-notebook"
Documentation = "https://vatlab.github.io/sos-docs/notebook.html"
"Bug Tracker" = "https://github.com/vatlab/sos-notebook/issues"

[project.entry-points.sos_converters]
"sos-ipynb" = "sos_notebook.converter:ScriptToNotebookConverter"
"ipynb-sos" = "sos_notebook.converter:NotebookToScriptConverter"
"ipynb-html" = "sos_notebook.converter:NotebookToHTMLConverter"
"ipynb-pdf" = "sos_notebook.converter:NotebookToPDFConverter"
"ipynb-md" = "sos_notebook.converter:NotebookToMarkdownConverter"
"ipynb-ipynb" = "sos_notebook.converter:NotebookToNotebookConverter"


[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.tpl", "*.png", "*.css", "*.j2", "*.json"]

[tool.uv]
dev-dependencies = [
    "invoke>=2.0",
    "pre-commit",
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "build",
    "mypy>=1.14.1",
    "types-psutil>=6.1.0.20241221",
    "pandas-stubs>=2.0.2.230605",
    "types-tabulate>=0.9.0.20241207",
    "papermill>=2.6.0",
    "sos-papermill>=0.2.1",
    "testpath>=0.6.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = false

# Ignore specific modules that don't have type hints
[[tool.mypy.overrides]]
module = [
    "sos.*",
    "selenium.*",
    "ipykernel.*",
    "papermill.*",
    "IPython.*",
]
ignore_missing_imports = true
ignore_errors = true
